# luca_project

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: rust.yaml
src-tauri/: .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/migrations/2025-08-21-203142_create_employees/: down.sql  up.sql
src-tauri/migrations/2025-09-12-150730_create_payroll_profiles/: down.sql  up.sql
src-tauri/src/: api.rs  lib.rs  main.rs  schema.rs
src-tauri/src/core/: db.rs  errors.rs  event_bus.rs  mod.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/employee/: commands.rs  events.rs  mod.rs  models.rs  repository.rs
src-tauri/src/modules/payroll/: commands.rs  listeners.rs  mod.rs  models.rs  repository.rs
src-tauri/tests/: employee_repository.rs  payroll_repository.rs  repository.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AddEmployeeForm.tsx  EmployeeList.tsx  PayrollDetails.tsx
src/lib/: api.ts
